Fix medallion image class name

--- a/css/backoffice/components/_medallion-icon.scss
+++ b/css/backoffice/components/_medallion-icon.scss
@@ -16,7 +16,7 @@ $ibo-medallion-icon--description--padding-left: 8px !default;
   display: flex;
   padding: $ibo-medallion-icon--padding-y $ibo-medallion-icon--padding-x;
 }
-.ibo-medallion--image{
+.ibo-medallion-icon--image{
   height: $ibo-medallion-icon--image--diameter;
   width: $ibo-medallion-icon--image--diameter;
   padding: $ibo-medallion-icon--image--padding;
