--- a/css/backoffice/layout/blocks-integrations/_medallion-with-blocklist.scss
+++ b/css/backoffice/layout/blocks-integrations/_medallion-with-blocklist.scss
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .ibo-blocklist--medallion{
-  > .ibo-medallion--image{
+  > .ibo-medallion-icon--image{
     margin: 0 auto;
   }
   > .ibo-medallion-icon--description{
