--- a/css/backoffice/components/input/_input-textarea.scss
+++ b/css/backoffice/components/input/_input-textarea.scss
@@ -1,5 +1,10 @@
 $ibo-input-text-area--min-height: 4rem !default;
 
-.ibo-input-text-area{
-	min-height: $ibo-input-text-area--min-height;
+.ibo-input-text-area {
+  min-height: $ibo-input-text-area--min-height;
+}
+
+.ibo-input-text-area--export {
+  width: 100%;
+  min-height: 15em;
 }
