N°3746 - Migrate modal to new UIBlock system

--- a/css/backoffice/layout/blocks-integrations/_all.scss
+++ b/css/backoffice/layout/blocks-integrations/_all.scss
@@ -6,3 +6,4 @@
 @import "caselog-entry-form-within-activity-panel";
 @import "panel-with-tab-container";
 @import "medallion-with-blocklist";
+@import "add-to-dashboard";
