--- a/css/backoffice/application/tabular-fields/_all.scss
+++ b/css/backoffice/application/tabular-fields/_all.scss
@@ -16,5 +16,4 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
-@import "display-block/all";
-@import "tabular-fields/all";
+@import "tabularfieldsselector";
