--- a/templates/base/layouts/activity-panel/layout.html.twig
+++ b/templates/base/layouts/activity-panel/layout.html.twig
@@ -1,8 +1,13 @@
-<div id="{{ oUIBlock.GetId() }}" class="ibo-activity-panel" data-role="ibo-activity-panel" data-object-class="{{ oUIBlock.GetObjectClass() }}" data-object-id="{{ oUIBlock.GetObjectId() }}" data-object-mode="{{ oUIBlock.GetObjectMode() }}">
+<div id="{{ oUIBlock.GetId() }}"
+     class="ibo-activity-panel {% if oUIBlock.IsExpanded() %}ibo-is-expanded{% endif %} {% if oUIBlock.IsClosed() %}ibo-is-closed{% endif %}"
+     data-role="ibo-activity-panel"
+     data-object-class="{{ oUIBlock.GetObjectClass() }}"
+     data-object-id="{{ oUIBlock.GetObjectId() }}"
+     data-object-mode="{{ oUIBlock.GetObjectMode() }}">
     <div class="ibo-activity-panel--header" data-role="ibo-activity-panel--header">
         <div class="ibo-activity-panel--tabs-togglers" data-role="ibo-activity-panel--tabs-togglers">
             {% for sCaseLogAttCode, aCaseLogData in oUIBlock.GetCaseLogTabs() %}
-				{% set sExtraCSSClass = (loop.index == 1) ? 'ibo-is-active' : '' %}
+                {% set sExtraCSSClass = (loop.index == 1) ? 'ibo-is-active' : '' %}
                 <div class="ibo-activity-panel--tab-toggler ibo-activity-panel--tab-toggler-for-caselog ibo-activity-panel--tab-toggler-for-caselog-{{ loop.index }} {{ sExtraCSSClass }}"
                      data-role="ibo-activity-panel--tab-toggler"
                      data-tab-type="caselog"
@@ -27,16 +32,21 @@
                     <span class="ibo-activity-panel--tab-title-text" title="{{ 'UI:Layout:ActivityPanel:Tab:Activity:Title'|dict_s }}">{{ 'UI:Layout:ActivityPanel:Tab:Activity:Title'|dict_s }}</span>
                 </a>
             </div>
-            <div class="ibo-activity-panel--size-toggler" data-role="ibo-activity-panel--size-toggler">
+            <div class="ibo-activity-panel--togglers" data-role="ibo-activity-panel--togglers">
                 <a href="#" class="ibo-activity-panel--expand-icon"
                    data-role="ibo-activity-panel--expand-icon"
                    data-tooltip-content="{{ 'UI:Layout:ActivityPanel:SizeToggler:Expand:Tooltip'|dict_s }}">
                     <span class="fas fa-fw fa-expand-alt"></span>
                 </a>
-                <a href="#" class="ibo-activity-panel--collapse-icon"
-                   data-role="ibo-activity-panel--collapse-icon"
-                   data-tooltip-content="{{ 'UI:Layout:ActivityPanel:SizeToggler:Collapse:Tooltip'|dict_s }}">
+                <a href="#" class="ibo-activity-panel--reduce-icon"
+                   data-role="ibo-activity-panel--reduce-icon"
+                   data-tooltip-content="{{ 'UI:Layout:ActivityPanel:SizeToggler:Reduce:Tooltip'|dict_s }}">
                     <span class="fas fa-fw fa-compress-alt"></span>
+                </a>
+                <a href="#" class="ibo-activity-panel--close-icon"
+                   data-role="ibo-activity-panel--close-icon"
+                   data-tooltip-content="{{ 'UI:Layout:ActivityPanel:DisplayToggler:Close:Tooltip'|dict_s }}">
+                    <span class="fas fa-fw fa-chevron-right"></span>
                 </a>
             </div>
         </div>
@@ -73,5 +83,13 @@
                 <div class="ibo-activity-panel--body--placeholder-hint">{{ 'UI:Layout:ActivityPanel:NoEntry:Placeholder:Hint'|dict_s }}</div>
             </div>
         {% endif %}
-	</div>
-</div>
+    </div>
+    <div class="ibo-activity-panel--closed-cover" data-role="ibo-activity-panel--closed-cover" data-tooltip-content="{{ 'UI:Layout:ActivityPanel:ClosedCover:Tooltip'|dict_s }}" data-tooltip-placement="left">
+        <span class="ibo-activity-panel--closed-content-container" data-role="ibo-activity-panel--closed-content-container">
+            <span class="ibo-activity-panel--closed-title" data-role="ibo-activity-panel--closed-title">{{ 'UI:Layout:ActivityPanel:ClosedCover:Title'|dict_s }}</span>
+            <span class="ibo-activity-panel--open-icon" data-role="ibo-activity-panel--open-icon">
+                <span class="fas fa-fw fa-chevron-up"></span>
+            </span>
+        </span>
+    </div>
+</div>f
