--- a/templates/base/layouts/activity-panel/layout.js.twig
+++ b/templates/base/layouts/activity-panel/layout.js.twig
@@ -5,5 +5,6 @@ $('#{{ oUIBlock.GetId() }}').activity_panel({
     lock_enabled: {{ oUIBlock.IsLockEnabled()|var_export }},
     lock_watcher_period: {{ get_config_parameter('activity_panel.lock_watcher_period') }},
     lock_endpoint: {{ oUIBlock.GetLockEndpointForJSWidget()|var_export|raw }},
-    show_multiple_entries_submit_confirmation: {{ oUIBlock.GetShowMultipleEntriesSubmitConfirmation()|var_export }}
+    show_multiple_entries_submit_confirmation: {{ oUIBlock.GetShowMultipleEntriesSubmitConfirmation()|var_export }},
+    save_state_endpoint: {{ oUIBlock.GetSaveStateEndpoint()|var_export|raw }}
 });
