N°3634 - Feedback alpha 3.0 : finish list - Fix css

--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -1,12 +1,11 @@
 /*!
- * copyright   Copyright (C) 2010-2020 Combodo SARL
- * license     http://opensource.org/licenses/AGPL-3.0
+ * @copyright   Copyright (C) 2010-2021 Combodo SARL
+ * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
 $ibo-input--height: 30px !default;
 $ibo-input--width: 100% !default;
 
-$ibo-input--background-color: $ibo-color-white-100 !default;
 $ibo-input--color: $ibo-color-grey-900 !default;
 $ibo-input--background-color: $ibo-color-white-100 !default;
 $ibo-input--border-color: $ibo-color-grey-500 !default;
