--- a/templates/base/layouts/activity-panel/tab-toolbar/caselog.html.twig
+++ b/templates/base/layouts/activity-panel/tab-toolbar/caselog.html.twig
@@ -8,8 +8,8 @@
 
 {% block bTabToolbarFirstRow %}
 	{% if oUIBlock.HasCaseLogTabEntryForm(sCaseLogAttCode) %}
-		<div class="ibo-activity-panel--tab-entry-form" data-role="ibo-activity-panel--tab-entry-form">
-			{{ render_block(oUIBlock.GetCaseLogTabEntryForm(sCaseLogAttCode)) }}
-		</div>
-	{% endif %}
+        <div class="ibo-activity-panel--tab-entry-form" data-role="ibo-activity-panel--tab-entry-form">
+            {{ render_block(oUIBlock.GetCaseLogTabEntryForm(sCaseLogAttCode), {bInitOpened: oUIBlock.IsEntryFormOpened()}) }}
+        </div>
+    {% endif %}
 {% endblock %}
