Fix static datatables width not using available space

--- a/templates/base/components/datatable/static/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/layout.ready.js.twig
@@ -31,6 +31,7 @@ $('#{{ oUIBlock.GetId() }}').DataTable({
     scrollX: true,
     scrollCollapse: true,
     order: [],
+    autoWidth: false,
     rowId: "id",
     filter: false,
     {% if oUIBlock.GetData()|length <= iPageSize %}
