N°3650 Datatable within panels take all available space

--- a/css/backoffice/layout/blocks-integrations/_all.scss
+++ b/css/backoffice/layout/blocks-integrations/_all.scss
@@ -7,3 +7,4 @@
 @import "panel-with-tab-container";
 @import "medallion-with-blocklist";
 @import "add-to-dashboard";
+@import "datatable-with-panel";
