N°3571 Migrate audit page to new style

--- a/css/backoffice/application/display-block/_block-csv.scss
+++ b/css/backoffice/application/display-block/_block-csv.scss
@@ -1,6 +1,6 @@
 $ibo-block-csv--textarea--width: 100% !default;
 $ibo-block-csv--textarea--min-height: 10em !default;
-$ibo-block-csv--textarea--margin-top: 10em !default;
+$ibo-block-csv--textarea--margin-top: 10px !default;
 
 .ibo-block-csv{
   textarea{
