Fix SCSS compile error due to wrong import

--- a/css/backoffice/application/tabular-fields/_all.scss
+++ b/css/backoffice/application/tabular-fields/_all.scss
@@ -16,4 +16,4 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
-@import "tabularfieldsselector";
+@import "tabular-fields-selector";
