Fix SCSS partial name

--- a/css/backoffice/layout/blocks-integrations/_all.scss
+++ b/css/backoffice/layout/blocks-integrations/_all.scss
@@ -5,6 +5,6 @@
 
 @import "caselog-entry-form-within-activity-panel";
 @import "panel-with-tab-container";
+@import "panel-with-datatable";
 @import "medallion-with-blocklist";
 @import "add-to-dashboard";
-@import "datatable-with-panel";
